# st-lang

./: .clang-format  .clang-tidy  .editorconfig  Dockerfile  LICENSE  Makefile  README.md  st.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
codegen/: .gitignore  CMakeLists.txt  CodeCoverage.cmake  Makefile  README.md  compile.sh  memory_test.sh  test.sh  unsupported_features.md
codegen/src/: codegen.c  codegen.h  handle_flags.c  handle_flags.h  main.c  scope.c  scope.h  semant.c  semant.h  semant_macros.h  st.y
codegen/tests/: boolean_operations.st  comparison_operations.st  consts.st  for_statement.st  function_declaration.st  globals.st  if_statement.st  locals.st  loop_statement.st  numeric_operations.st  procedure_declaration.st  put.st  sigma.st  sign_operations.st  subprogram_call.st  var_refs.st
codegen/tests/output/: consts.out  for_statement.out  globals.out  locals.out  numeric_operations.out  put.out  sigma.out  var_refs.out
javaa/: .gitignore  HelloWorldApp.jasm  Makefile  endlex.l
lexer/: .gitignore  CMakeLists.txt  Makefile  README.md  lexical-definition.md  memory_test.sh  test.sh  turing.l
lexer/include/: lex_macros.h  st-lex.h
lexer/src/: handle_flags.c  handle_flags.h  lextest.c  main.c  st-lex.c  st-parse.h  st.l
lexer/tests/: array.t  comment.st  expect_array.txt  expect_comment.t  expect_comment.txt  expect_id.txt  expect_num.txt  expect_op.txt  expect_skip.txt  expect_string.txt  expect_triangle.t  expect_triangle.txt  id.t  num.st  num.t  op.t  skip.t  string.st  triangle.st
lib/: CMakeLists.txt  Makefile  README.md
lib/include/: hashtab.h  list.h  scope.h  symtab.h
lib/src/: hash.h  hashtab.c  list.c  scope.c  symtab.c
lib/tests/: main.c  test_list.h  test_scope.h  test_symtab.h  util.h
libs/: CMakeLists.txt  Makefile
libs/include/: symtab.h
libs/src/: hashtab.c
libs/tests/: util.c
parser/: .gitignore  CMakeLists.txt  Makefile  README.md  errors.md  memory_test.sh  syntactic_and_semantic_definition.md  test.sh
parser/src/: handle_flags.c  handle_flags.h  main.c  scope.c  scope.h  semant.c  semant.h  semant_macros.h  st-parse.c  st.y
parser/tests/: block.st  for_statement.st  get_and_put.st  if_statement.st  loop_statement.st  program.st  sigma.st  simple.st  subprogram.st
parser/tests/bad/: arr01-1.st  arr01-2.st  arr01.st  arr02-1.st  arr02-2.st  arr02-3.st  arr03-2.st  arr03.st  arr04-1.st  arr04-2.st  arr05.st  arr06.st  call01.st  call02.st  call03.st  const01-1.st  const01-2.st  const01.st  const02-1.st  const02-2.st  const02-3.st  const02.st  const02_const02_const02.st  const03.st  contant-reassign.st  decl01-1.st  decl01-2.st  decl01-3.st  decl01-4.st  decl01-5.st  expr01.st  expr02.st  expr02_expr02.st  expr03.st  expr03_expr03_expr03_expr03_expr03.st  expr04.st  expr04_expr04_expr04_expr04_expr04_expr04_expr04_expr04_expr04_expr04_expr04_expr04.st  expr05.st  expr05_expr05_expr05_expr05_expr05_expr05.st  expr06.st  (+64 more)
parser/tests/good/: abs.st  all_and_none.st  array_as_reference.st  declaration.st  dynamic_formal_types.st  fibonacci.st  for_statement.st  identifier_shadowing.st  infinite_loop.st  msb.st  string_as_reference.st  string_concate.st  string_with_max_length.st  subprogram_call.st  subprogram_declarations.st  variable_declaration.st  variable_reassign.st
src/: hashtab.h  list.c  list.h  symtab.c  symtab.h
test/: main.c  test_symtab.h  util.c  util.h
